Add wordpress docs

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -34,6 +34,11 @@ import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
     description="Upload images or paste URLs in a web interface. No code required."
     href="/content-analyzer/"
   />
+  <LinkCard
+    title="WordPress Plugin"
+    description="Alt text, captions, and product descriptions for your entire Media Library. WooCommerce support included."
+    href="/wordpress/"
+  />
 </CardGrid>
 
 ## How It Works
@@ -51,7 +56,7 @@ Visionati runs your image through multiple services and returns everything in on
   <Card title="Computer Vision" icon="magnifier">
     Tags, face detection, color extraction, OCR, brand detection, and NSFW scoring from Google Vision, Clarifai, Rekognition, and Imagga.
   </Card>
-  <Card title="11 Built-in Roles" icon="list-format">
+  <Card title="12 Built-in Roles" icon="list-format">
     From ecommerce product copy to real estate listings to art criticism. Or write your own prompt.
   </Card>
   <Card title="160 Languages" icon="translate">
