Add Figma to main page

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -39,6 +39,11 @@ import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
     description="Alt text, captions, and product descriptions for your entire Media Library. WooCommerce support included."
     href="/wordpress/"
   />
+  <LinkCard
+    title="Figma Plugin"
+    description="Alt text, captions, and descriptions written as color-coded annotations. Visible in design mode and Dev Mode handoff."
+    href="/figma-plugin/"
+  />
 </CardGrid>
 
 ## How It Works
